--- a/Views/Curso/Create.cshtml
+++ b/Views/Curso/Create.cshtml
@@ -1,4 +1,4 @@
-@model Curso
+﻿@model Curso
 
 @{
     ViewData["Title"] = "Creación de Curso";
@@ -7,6 +7,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<div asp-validation-summary="All"></div>
 <form method="POST">
     <div>
         <label asp-for="Nombre"></label>    
@@ -18,7 +19,12 @@
     </div>
         <div>
         <label asp-for="Jornada"></label>
-        <input  asp-for="Jornada"/>
+        
+        @Html.DropDownList(
+            "Jornada", Html.GetEnumSelectList<TiposJornada>(),
+            "Seleccione una jornada",
+            new {@class = "form-control"}
+        )
     </div>
     <input type="submit"/>
 </form>
